[gd_scene load_steps=8 format=1]

[ext_resource path="res://widgets/control_widget/config_gui.gd" type="Script" id=1]
[ext_resource path="res://widgets/graphics/button_hover.tres" type="StyleBox" id=2]
[ext_resource path="res://widgets/graphics/button_focus.tres" type="StyleBox" id=3]
[ext_resource path="res://widgets/graphics/button_pressed.tres" type="StyleBox" id=4]
[ext_resource path="res://widgets/graphics/button_normal.tres" type="StyleBox" id=5]
[ext_resource path="res://widgets/control_widget/touchpad_config_gui.tscn" type="PackedScene" id=6]

[sub_resource type="StyleBoxFlat" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.8, 0.8, 0.8, 1 )
dark_color = Color( 0.8, 0.8, 0.8, 1 )
border_size = 0
border_blend = true
draw_bg = true

[node name="config_gui" type="Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 200.0
margin/bottom = 400.0
custom_styles/panel = SubResource( 1 )
script/script = ExtResource( 1 )

[node name="num_pads_header_label" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 116.0
margin/bottom = 24.0
text = "Number of pads:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="num_pads_buttons" type="HButtonArray" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 190.0
margin/bottom = 70.0
custom_styles/hover = ExtResource( 2 )
custom_styles/focus = ExtResource( 3 )
custom_styles/selected = ExtResource( 4 )
custom_styles/normal = ExtResource( 5 )
custom_constants/button_separator = 0
flat = false
button/count = 2
button/min_button_size = -1.0
button/align = 4
button/0/text = "1"
button/0/tooltip = ""
button/0/icon = null
button/1/text = "2"
button/1/tooltip = ""
button/1/icon = null
button/selected = 0

[node name="configure_pad1_button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 120.0
margin/right = 190.0
margin/bottom = 200.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Configure Pad #1"
flat = false

[node name="configure_pad2_button" type="Button" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 210.0
margin/right = 190.0
margin/bottom = 290.0
custom_styles/hover = ExtResource( 2 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Configure Pad #2"
flat = false

[node name="touchpad_config_gui" parent="." instance=ExtResource( 6 )]

visibility/visible = false


